Fixed error message on mobile

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -262,4 +262,8 @@ div.error {
         display: block;
         height: auto;
     }
+    
+    div.error {
+        top: 100px;
+    }
 }
